--- a/roles/ide/tasks/main.yml
+++ b/roles/ide/tasks/main.yml
@@ -6,3 +6,4 @@
     src: https://download.jetbrains.com/idea/ideaIU-2017.3.4-no-jdk.tar.gz
     dest: ~/IDE
     remote_src: yes
+    creates: ~/IDE/Intellij
